[tool.poetry]
name = "bountyhunter_api"
version = "0.1.0"
description = "A web server to act as a data bin for the bountyhunter bot "
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
